--- a/web-ui/src/Components/App.css
+++ b/web-ui/src/Components/App.css
@@ -1,6 +1,6 @@
 /* Gloabl Styles */ 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
-body, p, input, label, button {
+body, p, input, label, button, select, textarea, option {
   font-family: 'Lato', sans-serif;
 }
