--- a/web-ui/src/Components/Header.css
+++ b/web-ui/src/Components/Header.css
@@ -3,6 +3,13 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
+    background-color: mediumturquoise;
+    padding: 0rem 2rem;
+    justify-content: space-between;
+}
+header aside a {
+    text-decoration: none;
+    color: inherit;
 }
 header nav {
     flex: 1
@@ -10,7 +17,12 @@ header nav {
 header nav ul {
     display: flex;
     list-style: none;
+    justify-content: space-evenly;
 }
 header nav ul li {
     display: flex;
+}
+header nav ul li a {
+    text-decoration: none;
+    color: inherit
 }
