--- a/web-ui/src/style/app.css
+++ b/web-ui/src/style/app.css
@@ -202,7 +202,7 @@ table {
 }
 .about__accodionDetails {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: flex-start;
   margin: 0 3rem;
 }
