--- a/web-ui/src/style/app.css
+++ b/web-ui/src/style/app.css
@@ -297,7 +297,7 @@ table {
   border-top: 1px solid gray;
   padding-top: 5px;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 .hide {
   display: none;
